--- a/app/src/main/res/layout/fragment_equipe.xml
+++ b/app/src/main/res/layout/fragment_equipe.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".nationalTeamsUI.equipe_plays.EquipePlaysFragment">
+    tools:context=".nationalTeamsUI.equipe_matches.EquipeMatchesFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_our_equipe"
