--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,9 +7,9 @@
 
     <fragment
         android:id="@+id/navigation_home"
-        android:name="com.example.alliancertu.ui.home.HomeFragment"
+        android:name="com.example.alliancertu.ui.sportClub.SportClubFragment"
         android:label="@string/title_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_sport_club" />
 
     <fragment
         android:id="@+id/navigation_national_teams"
