--- a/app/src/main/res/layout/fragment_results_matches.xml
+++ b/app/src/main/res/layout/fragment_results_matches.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".nationalTeamsUI.result_matches.ResultsMatchesFragment">
+    tools:context=".nationalTeamsUI.result_matches.ResultMatchesFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_results_matches"
