--- a/app/src/main/res/layout/activity_national_team.xml
+++ b/app/src/main/res/layout/activity_national_team.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".NationalTeamActivity">
+    tools:context=".ui.national_teams.NationalTeamActivity">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/logo_cheerleading"
