--- a/app/src/main/res/layout/activity_national_team.xml
+++ b/app/src/main/res/layout/activity_national_team.xml
@@ -8,41 +8,44 @@
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/logo_cheerleading"
-        android:layout_width="100dp"
+        android:layout_width="wrap_content"
         android:layout_height="100dp"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="4dp"
         android:layout_marginLeft="4dp"
+        android:layout_marginTop="4dp"
         android:background="@drawable/cheerleading"
+        app:civ_border_width="2dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:civ_border_width="2dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/title_cheerleading"
-        android:layout_width="208dp"
+        android:layout_width="wrap_content"
         android:layout_height="40dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="2dp"
-        android:layout_marginBottom="4dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
         android:text="@string/title_cheerleading"
         app:layout_constraintBottom_toTopOf="@+id/national_team_nav_view"
-        app:layout_constraintStart_toEndOf="@+id/logo_cheerleading"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.115" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/logo_cheerleading" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/national_team_nav_view"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginRight="4dp"
         android:background="?android:attr/windowBackground"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/logo_cheerleading"
-        app:menu="@menu/national_team_menu" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView2"
+        app:menu="@menu/national_team_menu">
+
+    </com.google.android.material.bottomnavigation.BottomNavigationView>
 
     <fragment
         android:id="@+id/national_team_nav_host_fragment"
@@ -59,23 +62,45 @@
     <TextView
         android:id="@+id/vk"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginTop="10dp"
         android:text="vk link"
-        app:layout_constraintStart_toEndOf="@+id/logo_cheerleading"
-        app:layout_constraintTop_toBottomOf="@+id/title_cheerleading" />
+        app:layout_constraintStart_toEndOf="@+id/imageView4"
+        app:layout_constraintTop_toBottomOf="@+id/logo_cheerleading" />
 
     <TextView
         android:id="@+id/instagram"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginTop="4dp"
         android:text="instagram link"
-        app:layout_constraintStart_toEndOf="@+id/logo_cheerleading"
+        app:layout_constraintStart_toEndOf="@+id/imageView2"
         app:layout_constraintTop_toBottomOf="@+id/vk" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginTop="4dp"
+        app:layout_constraintStart_toEndOf="@+id/title_cheerleading"
+        app:layout_constraintTop_toBottomOf="@+id/imageView4"
+        app:srcCompat="@drawable/instasmall" />
+
+    <ImageView
+        android:id="@+id/imageView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintStart_toEndOf="@+id/title_cheerleading"
+        app:layout_constraintTop_toBottomOf="@+id/logo_cheerleading"
+        app:srcCompat="@drawable/vksmall" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
